# Programming-in-C-and-C

./: README.md
2324L_48_s31677_SR 1/: CMakeLists.txt  GlobalHeader.hpp  deleteRecord.cpp  generateNewTable.cpp  getColumnByName.cpp  getData.cpp  getTableByName.cpp  main.cpp  putData.cpp  read.cpp  save.cpp
2324L_48_s31677_SR 1/classes/: DBColumn.hpp  DBRow.hpp  DBRowValue.hpp  DBTable.hpp  Join.hpp
